# tracET

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirments.txt  visu.ipynb  visu_utils.py
cmodules/: setup.py  supressionmodule.c  validate.py
cmodules/supression.egg-info/: PKG-INFO  SOURCES.txt
core/: diff.py  lio.py  utils.py
metrics/: dice.py  metrics.py
mt/: inference.py  losses.py  models.py  representation.py  training.py  training_regression.py
mt_scripts/: All_funcs.py  apply_nonmaxsup.py  csv_to_scalarmap.py  graph_uts.py  lines_to_smap.py  lines_to_smap_synth.py  lm_tomo.py  mrc_uts.py  prep_synth.py  target_test.py  trace_graph.py  txt2xml.py  utils.py  vtk_uts.py  zoom_tomos.py
scripts/: seg_skel_dice.py
src/tracET/cmodules/: setup.py  supressionmodule.c  validate.py
src/tracET/cmodules/supression.egg-info/: PKG-INFO
src/tracET/core/: diff.py  skel.py
src/tracET/metrics/: dice.py  dice2.py
src/tracET/representation/: clustering.py  curve.py  graph_uts.py  graphs.py
src/tracET/scripts/: Get_cluster.py  apply_nonmaxsup.py  get_saliency.py  membrane_poly.py  script_nonmaxsup.py  seg_skel_dice.py  trace_graph.py  trace_graph2.py
tracET/cmodules/: supressionmodule.c  validate.py
tracET/core/: diff.py  lio.py  skel.py  vtk_uts.py
tracET/metrics/: dice2.py
tracET/representation/: clustering.py  curve.py  graphs.py
tracET/scripts/: Get_cluster.py  apply_nonmaxsup.py  get_saliency.py  membrane_poly.py  seg_skel_dice.py  trace_graph.py
